add memo to myself

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>I'm an h1</h1>
+	  <!--  Make it a git repo before making it a github repo-->
+   <h1>I'm an h1</h1>
     <ul>
       <li>
         <a href="https://example.com/" style="color: red;">Link</a>
