--- a/index.html
+++ b/index.html
@@ -4,33 +4,45 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+<style>
+ a {
+   border: 2px solid purple;
+   color: blue;
+ }
+ div {
+	 border: 1px solid black;
+ }
+ div a {
+	 color: green;
+ }
+</style>
   </head>
   <body>
 	  <!--  Make it a git repo before making it a github repo-->
    <h1>I'm an h1</h1>
     <ul>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
     </ul>
     <h2>I'm an h2</h2>
     <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+      <a href="https://example.com/">I'm a link</a>
     </div>
     <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+      <a href="https://example.com/">I'm a link</a>
     </div>
     <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+      <a href="https://example.com/">I'm a link</a>
     </div>
     <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+      <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
 </html>
