--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
    border: 2px solid purple;
    color: blue;
  }
- div {
+ #ExecBio {
+	 background-color: lightgray;
+ }
+ .BioBox {
 	 border: 1px solid black;
  }
- div a {
+ .BioBox a {
 	 color: green;
  }
 </style>
@@ -32,16 +35,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
+    <div id="ExecBio" class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
+    <div class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
+    <div class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
+    <div class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
