Complete Ch1 exercises

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
  #ExecBio {
 	 background-color: lightgray;
  }
+ #CitrusBio a {
+	 color: orange;
+ }
  .BioBox {
 	 border: 1px solid black;
  }
  .BioBox a {
 	 color: green;
+ }
+ .WaterBio {
+	 background-color: azure;
  }
 </style>
   </head>
@@ -41,10 +47,10 @@
     <div class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="BioBox">
+    <div id="CitrusBio" class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="BioBox">
+    <div class="BioBox" class="WaterBio">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
