Reduce class complexity

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="CitrusBio" class="BioBox">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="WaterBio" class="BioBox">
+    <div class="BioBox WaterBio">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
