--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
-<style>
+<style> 
+      /* Global Styles */
+ html {
+	 background: lightgray;
+ }
+div {
+	boder: 3px solid green;
+}
  a {
    border: 2px solid purple;
    color: blue;
  }
- #ExecBio {
-	 background-color: lightgray;
- }
- #CitrusBio a {
-	 color: orange;
- }
+      /* Individual Styles */
+         /* Bio Styles */
  .BioBox {
 	 border: 1px solid black;
  }
- .BioBox a {
+ .BioCopy a {
 	 color: green;
  }
- .WaterBio {
-	 background-color: azure;
+         /* Social Styles */
+ .SocialLink {
+	 color: blue;
  }
 </style>
   </head>
   <body>
-	  <!--  Make it a git repo before making it a github repo-->
-   <h1>I'm an h1</h1>
+	  <!-- Personal memo:  Make it a git repo before making it a github repo -->
+   <h1 class="SocialLink">I'm an h1</h1>
     <ul>
       <li>
         <a href="https://example.com/">Link</a>
@@ -41,17 +45,53 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="ExecBio" class="BioBox">
-      <a href="https://example.com/">I'm a link</a>
+    <div class="BioBox">
+      <h3>Michael Hartl</h3>
+      <a href="https://twitter.com/mhartl" class="SocialLink">here</a>
+       <div class="BioCopy">
+      <p>
+        Known for his dazzling charm, rapier wit, and unrivaled humility,
+        Michael is the creator of the
+        <a href="https://www.railstutorial.org/">Ruby on Rails
+        Tutorial</a> and principal author of the
+        <a href="https://learnenough.com/">
+        Learn Enough to Be Dangerous</a> introductory sequence. Michael
+        is also notorious as the founder of
+        <a href="http://tauday.com/">Tau Day</a> and author of
+        <a href="http://tauday.com/tau-manifesto"><em>The Tau
+        Manifesto</em></a>, but rumors that he's secretly a supervillain
+        are slightly exaggerated. 
+       </div>
     </div>
     <div class="BioBox">
-      <a href="https://example.com/">I'm a link</a>
+     <h3>Lee Donahoe</h3>
+      <a href="https://twitter.com/leedonahoe" class="SocialLink">here</a>
+      <div class="BioCopy">
+      <p>
+        When he's not literally swimming with sharks or hunting powder stashes on
+        his snowboard, you can find Lee in front of his computer designing
+        interfaces, doing front-end development, or writing some of the
+        interface-related Learn Enough tutorials.
+      </p>   
+      </div>
     </div>
-    <div id="CitrusBio" class="BioBox">
-      <a href="https://example.com/">I'm a link</a>
+    <div class="BioBox">
+      <h3>Nick Merwin</h3>
+      <a href="https://twitter.com/nickmerwin" class="SocialLink">here</a>
+      <div class="BioCopy">
+      <p>
+        You may have seen him shredding guitar live with Capital Cities on Jimmy
+        Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
+        heart. He's just as happy shredding well-spec'd lines of code from a tour
+        bus as he is from his kitchen table.
+      </p>   
+      </div>
     </div>
-    <div class="BioBox WaterBio">
-      <a href="https://example.com/">I'm a link</a>
+    <div class="BioBox">
+      <h3>??</h3>
+      <p>
+        The Future
+      </p>   
     </div>
   </body>
 </html>
